--- a/SsoLogin/src/main/AndroidManifest.xml
+++ b/SsoLogin/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.edugorilla.ssologin">
 
+    <application>
+        <activity
+            android:name=".WebView"
+            android:exported="true" />
+    </application>
+
 </manifest>
